@@ -3,3 +3,4 @@
 -Duser.country=US
 -Duser.timezone=UTC
 --enable-native-access=ALL-UNNAMED
+--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
